--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,19 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.android.ollintest">
 
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:largeHeap="true"
+        android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
             android:name="com.example.android.ollintest.MainActivity"
@@ -179,7 +180,13 @@
         <activity
             android:name="com.example.android.ollintest.SignUpActivity"
             android:label="@string/header_sign_up"></activity>
-        <service android:name="com.example.android.ollintest.service.MotionSensors"/>
+        <activity
+            android:name="com.example.android.ollintest.util.UploadToServer"
+            android:label="@string/header_sign_up"
+            android:theme="@android:style/Theme.NoDisplay"></activity>
+
+        <service android:name="com.example.android.ollintest.service.MotionSensors" />
+
         <activity
             android:name="com.example.android.ollintest.LoginActivity"
             android:label="@string/header_login">
@@ -189,5 +196,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <receiver android:name="com.example.android.ollintest.broadcast.NetworkMonitor">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+                <action android:name="android.net.wifi.WIFI_STATE_CHANGED" />
+            </intent-filter>
+        </receiver>
     </application>
 </manifest>
