Fxing audio bugs to prevent them to stop when screen is locked

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.inger.android.ollintest">
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -227,6 +228,7 @@
 
         <service android:name="com.inger.android.ollintest.service.MotionSensors" />
         <service android:name="com.inger.android.ollintest.service.UploadToServer" />
+        <service android:name="com.inger.android.ollintest.service.BackgroundAudioService" />
 
         <activity
             android:name="com.inger.android.ollintest.LoginActivity"
