Change of name from attributes to keep a backup service, parallel to fiware storage services.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -270,7 +270,7 @@
             </intent-filter>
         </activity>
 
-        <!--<receiver android:name="com.inger.android.ollintest.broadcast.NetworkMonitor">
+        <!--<receiver android:name="com.cicese.android.matest.broadcast.NetworkMonitor">
             <intent-filter>
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
                 <action android:name="android.net.wifi.WIFI_STATE_CHANGED" />
